--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -10,12 +10,14 @@ on:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: frontend
-
+    
     steps:
       - uses: actions/checkout@v3
+      
+      - name: Debug directory structure
+        run: |
+          pwd
+          ls -la
 
       - name: Set up Node.js
         uses: actions/setup-node@v3
@@ -23,13 +25,13 @@ jobs:
           node-version: 18
 
       - name: Inject VITE_API_SERVER
-        run: echo "VITE_API_SERVER=${{ secrets.VITE_API_SERVER }}" > .env
+        run: echo "VITE_API_SERVER=${{ secrets.VITE_API_SERVER }}" > frontend/.env
 
       - name: Install dependencies
-        run: npm ci
+        run: cd frontend && npm ci
 
       - name: Build Vite project
-        run: npm run build
+        run: cd frontend && npm run build
 
       - name: Deploy to Azure Static Web Apps
         uses: azure/static-web-apps-deploy@v1
@@ -37,4 +39,5 @@ jobs:
           azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_TOKEN }}
           app_location: "frontend"
           output_location: "dist"
+          skip_app_build: true
           deployment_action: "upload"
