--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -25,19 +25,19 @@ jobs:
           node-version: 18
 
       - name: Inject VITE_API_SERVER
-        run: echo "VITE_API_SERVER=${{ secrets.VITE_API_SERVER }}" > frontend/.env
+        run: echo "VITE_API_SERVER=${{ secrets.VITE_API_SERVER }}" > .env
 
       - name: Install dependencies
-        run: cd frontend && npm ci
+        run: npm ci
 
       - name: Build Vite project
-        run: cd frontend && npm run build
+        run: npm run build
 
       - name: Deploy to Azure Static Web Apps
         uses: azure/static-web-apps-deploy@v1
         with:
           azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_TOKEN }}
-          app_location: "frontend"
+          app_location: "."
           output_location: "dist"
           skip_app_build: true
           deployment_action: "upload"
