--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -41,6 +41,6 @@ jobs:
         uses: azure/static-web-apps-deploy@v1
         with:
           azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_TOKEN }}
-          app_location: "."
-          output_location: "dist"
+          app_location: "dist"  # Changed from "." to "dist"
           skip_app_build: true
+          action: "upload"  # Added this line explicitly
