--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -27,6 +27,10 @@ jobs:
       - name: Inject VITE_API_SERVER
         run: echo "VITE_API_SERVER=${{ secrets.VITE_API_SERVER }}" > .env
 
+      # Print .env file for debugging (remove or comment out in production)
+      - name: Debug .env
+        run: cat .env
+
       - name: Install dependencies
         run: npm ci
 
@@ -41,6 +45,6 @@ jobs:
         uses: azure/static-web-apps-deploy@v1
         with:
           azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_TOKEN }}
-          app_location: "dist"  # Changed from "." to "dist"
+          app_location: "dist"
           skip_app_build: true
-          action: "upload"  # Added this line explicitly
+          action: "upload"
