--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@testing-library/jest-dom": "^6.1.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.5.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "@vitejs/plugin-react-swc": "^3.10.0",
     "babel-jest": "^29.7.0",
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2",
@@ -38,7 +40,8 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "text-encoding": "^0.7.0"
+    "text-encoding": "^0.7.0",
+    "vite": "^5.1.6"
   },
   "jest": {
     "testEnvironment": "jsdom",
