--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -34,6 +34,10 @@ jobs:
         run: npm run test
         continue-on-error: true
 
+      - name: Lint
+        run: npm run lint
+        continue-on-error: true
+
       - name: Build Vite project
         run: npm run build
 
